# CodeService-Template

./: Dockerfile  README.md  s2config.json
s2-codeservice-template/: .env  .env.example  README.md  pyproject.toml
s2-codeservice-template/s2_codeservice_template/: __init__.py  database.py  db.py  s2.py
